<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="40dp" >

        <TextView
            android:id="@+id/filtersTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filters"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/subgroup" />

        <Spinner
            android:id="@+id/subgroupsSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/discipline" />

        <Spinner
            android:id="@+id/disciplinesSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/type" />

        <Spinner
            android:id="@+id/typesSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableLayout>

</ScrollView>